--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "crypt": "^0.0.2",
     "crypto-js": "^4.1.1",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "errorhandler": "^1.5.1",
